--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Devel-Trepan-Shell
 
+1.1  Jan 17, 2012
+- Reduce dependencies. Alow it to work on Perl 5.008.
+
 1.0  Jan 16, 2012
 - Initial release. Add debugger command "shell" and alias "re.pl.
   Add Devel::REPL.pl plugins trepan and Perldb with commands %trepan
