--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Devel-Trepan-Shell
 
+1.3  May 25 2012
+- Rerelease to note that we need perl 5.10 or greater
+
 1.2  May 24 2012
 - Remove defined(@array) which is deprecated in Perl 5.16
 - Remove Psh as shell. That should go in another plugin
