--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2012-05-25  Rocky Bernstein <rocky@cpan.org>
+
+	* Build.PL, lib/Devel/Trepan/CmdProcessor/Command/Shell.pm,
+	lib/Devel/Trepan/Shell.pm: Tolerate Perl 5.08 or so. Remove Stray
+	non-UTF8 character in POD.
+
+2012-05-25  Rocky Bernstein <rocky@cpan.org>
+
+	* ChangeLog, Changes, lib/Devel/Trepan/Shell.pm: Get ready for
+	release 1.3
+
 2012-05-24  Rocky Bernstein <rocky@cpan.org>
 
 	* Build.PL, t/00test-pod.t: Need Perl 5.10 or greater. While we are
