--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Devel-Trepan-Shell
 
+1.4  May 26 2012
+- Rewrite tolerate back to 5.8. Remove non-UTF8 character in POD to remove
+  CPANTS testing failure
+
 1.3  May 25 2012
 - Rerelease to note that we need perl 5.10 or greater
 
